dataset/local/tf_ecs_efs_encryption/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_task_definition
        values:
          volume:
            - efs_volume_configuration:
                - transit_encryption: "ENABLED"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_task_definition
        values:
          volume:
            - efs_volume_configuration:
                - transit_encryption: "DISABLED"
